changes in application.properties and pom.xml

--- a/pdfgenerator/pom.xml
+++ b/pdfgenerator/pom.xml
@@ -51,9 +51,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.23</version> <!-- Use the appropriate version -->
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.itextpdf</groupId>
