--- a/pdfgenerator/src/main/resources/application.properties
+++ b/pdfgenerator/src/main/resources/application.properties
@@ -4,19 +4,12 @@
 management.endpoints.web.exposure.include=env
 server.port=7070
 
-spring.datasource.url=jdbc:sqlserver://ec2-3-13-89-17.us-east-2.compute.amazonaws.com:1433;databaseName=RESOURCES;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://3.129.217.224:1433;databaseName=RESOURCES;
 spring.datasource.username=gotracrat
 spring.datasource.password=dev@123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-#spring.openingsEmailEnabled=true
-#spring.mail.host=smtp.gmail.com
-#spring.mail.password=sevofcvnsikoiwxw
-#spring.mail.port=587
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
-#spring.mail.username=resourcetracker72@gmail.com
+
 
 spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.max-request-size=100MB
@@ -24,12 +17,3 @@ spring.servlet.multipart.max-request-size=100MB
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
-#spring.cloud.aws.secretsmanager.region=us-east-2
-#spring.cloud.aws.credentials.access-key=AKIAQ3EHRJ7UZUJIA75H
-#spring.cloud.aws.credentials.secret-key=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
-
-#spring.cloud.config.import=optional:aws-secretsmanager:secret/spring-boot-app
-
-
-#spring.security.user.name=admin
-#spring.security.user.password=secret@2020
