--- a/pdfgenerator/pom.xml
+++ b/pdfgenerator/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>2.5.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.librepdf</groupId>
@@ -60,7 +65,11 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.23</version> <!-- Use the appropriate version -->
+		</dependency>
 	</dependencies>
 
 <!--	<build>-->
