--- a/pdfgenerator/src/main/resources/application.properties
+++ b/pdfgenerator/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 
 
 
-management.endpoints.web.exposure.include=env
+#management.endpoints.web.exposure.include=env
 server.port=7070
-
-spring.datasource.url=jdbc:sqlserver://3.129.217.224:1433;databaseName=RESOURCES;
+#
+spring.datasource.url=jdbc:sqlserver://ec2-3-13-89-17.us-east-2.compute.amazonaws.com:1433;databaseName=RESOURCES;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=gotracrat
 spring.datasource.password=dev@123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-
-
-spring.servlet.multipart.maxFileSize=100MB
-spring.servlet.multipart.max-request-size=100MB
-
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-
+#
+#
+#
+#spring.servlet.multipart.maxFileSize=100MB
+#spring.servlet.multipart.max-request-size=100MB
+#
+##spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#
+#
