changes in OpenPDFServiceImpl.java

--- a/pdfgenerator/src/main/resources/application.properties
+++ b/pdfgenerator/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 #management.endpoints.web.exposure.include=env
 server.port=7070
 #
+output.directory=c:\ab
+
 spring.datasource.url=jdbc:sqlserver://ec2-3-13-89-17.us-east-2.compute.amazonaws.com:1433;databaseName=RESOURCES;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=gotracrat
 spring.datasource.password=dev@123
